Fix settings empty screen on ios 10.2
Fixes #737

--- a/src/styl/settings.styl
+++ b/src/styl/settings.styl
@@ -1,12 +1,13 @@
 .settings_list
-  margin-bottom 15px
-  height 100%
+  flex-grow 1
   .explanation
     padding 15px
-  &.general
-    margin-bottom 0
-    height calc(100% - 40px)
 
+.app_version
+  flex-grow 0
+  padding 10px 15px
+  font-size 0.75em
+  color darken(#DFDFDF, 10%)
 
 .radio_list
   .list_item
@@ -87,11 +88,6 @@
 
 .settingsChoicesBlock
   background-color selectBg
-
-.app_version
-  padding 10px 15px
-  font-size 0.75em
-  color darken(#DFDFDF, 10%)
 
 .board_icon
   display inline-block
